--- a/app/Resources/views/cours/filAriane.html.twig
+++ b/app/Resources/views/cours/filAriane.html.twig
@@ -1,3 +1,4 @@
+{#{% if hasReferentMinRights %}#}
 <div class="menuDiscCourses" style="display: block;">
     <div class="btnMenuDiscCourses">
         <i class="fa fa-bars"></i>
@@ -9,6 +10,14 @@
             <a class="coursLink" href="{{ path('oneCours', {id: val.id, mode: 'etu'}) }}">{{ val.nom }}</a>
         {% endfor %}
     </div>
+</div>
+{#{% endif %}#}
+<div class="menuGoBackDiscs" style="display: block;">
+    <a href="{{ path('myCourses') }}">
+        <div class="btnGoBack">
+            <i class="fa fa-undo" aria-hidden="true"></i>
+        </div>
+    </a>
 </div>
 <script language="JavaScript">
     jQuery(document).ready(function () {
