--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -9,6 +9,7 @@
                 {% set datetimeStart = '2017-07-01' %}
                 {% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') or app.environment=='dev'  %}
                     <h4 class="heading text-center">CONNECTEZ VOUS</h4>
+                    <p style="text-align: center">Pour les étudiants et les professeurs stagiaires de l'AFADEC</p>
 
                     {% include "FOSUserBundle:Security:login_content.html.twig" %}
 
