--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -17,7 +17,7 @@
                     <div style="text-align: center; font-size: 20px;color: #aaa;margin: 10px;">OU</div>
                     <a href="{{ path('inscription') }}" class="btn btn-primary">Créer un compte</a>
                 {% else %}
-                    <div class="row">
+                    {#<div class="row">
                         <div class="col-sm-12">
                             <div class="icon-box-5">            <!-- ***** Icon Box Style 5 ***** -->
                                 <div class="icon-box-icon">
@@ -31,7 +31,7 @@
                             </div>
                         </div>
 
-                    </div>
+                    </div>#}
                 {% endif %}
             </div>
         </aside>
