--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -14,10 +14,10 @@
                     {% include "FOSUserBundle:Security:login_content.html.twig" %}
 
                     <a href="{{ path('fos_user_resetting_request') }}" style="margin-top: 15px;display: inline-block">Mot de passe oublié ?</a>
-                    <div style="text-align: center; font-size: 20px;color: #aaa;margin: 10px;">OU</div>
-                    <a href="{{ path('inscription') }}" class="btn btn-primary">Créer un compte</a>
+                    {#<div style="text-align: center; font-size: 20px;color: #aaa;margin: 10px;">OU</div>
+                    <a href="{{ path('inscription') }}" class="btn btn-primary">Créer un compte</a>#}
                 {% else %}
-                    {#<div class="row">
+                    <div class="row">
                         <div class="col-sm-12">
                             <div class="icon-box-5">            <!-- ***** Icon Box Style 5 ***** -->
                                 <div class="icon-box-icon">
@@ -31,7 +31,7 @@
                             </div>
                         </div>
 
-                    </div>#}
+                    </div>
                 {% endif %}
             </div>
         </aside>
