freeaccess sur les disciplines

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -185,7 +185,7 @@
                                 <li><a href="{{ path('concours') }}">Concours</a></li>
                                 <li><a href="{{ path('faq') }}">FAQ</a></li>
                                 <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                                <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
+                                {#<li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>#}
                                 <li><a href="{{ path('cookies') }}">Cookies</a></li>
                             </ul>
                         </li>
@@ -312,7 +312,7 @@
                             <li><a href="{{ path('concours') }}">Concours</a></li>
                             <li><a href="{{ path('faq') }}">FAQ</a></li>
                             <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                            <li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>
+                            {#<li><a href="{{ path('inscription') }}">Comment s'inscrire ?</a></li>#}
                             <li><a href="{{ path('afadec') }}">L’AFADEC</a></li>
                         </ul>
                     </div>
