--- a/app/Resources/views/pagesFixes/afadecContent.html.twig
+++ b/app/Resources/views/pagesFixes/afadecContent.html.twig
@@ -108,8 +108,8 @@
                     <li><a href="{{ path('concours') }}">Concours</a></li>
                     <li><a href="{{ path('faq') }}">FAQ</a></li>
                     <li><a href="{{ path('metierEnseignant') }}">Le métier d'enseignant</a></li>
-                    <li><a href="{{ path('inscription') }}">Comment s'inscrire
-                            ?</a></li>
+                    {#<li><a href="{{ path('inscription') }}">Comment s'inscrire
+                            ?</a></li>#}
                 </ul>
             </figure>
         </div>
