--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -54,7 +54,7 @@
                     <iframe class="" width="100%" height="430" frameborder="0" allowfullscreen=""
                             mozallowfullscreen="" webkitallowfullscreen=""
                             src="https://player.vimeo.com/video/123835230"></iframe>#}
-                    <a style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
+                    <a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
                         <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png') }}" />
                     </a>
 
