--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -177,7 +177,7 @@
         {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
             {% set generatedRole = "admin" %}
         {% else %}
-            {% set generatedRole = val.role %}
+            {% set generatedRole = app.user.statut %}
         {% endif %}
     {% endif %}
 
