freeaccess sur les disciplines

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -249,6 +249,7 @@
                                             <li><a href="{{ path('devoirsManag') }}">Des devoirs</a></li>
                                             <li><a href="{{ path('usersManag') }}">Des utilisateurs</a></li>
                                             <li><a href="{{ path('notifsManag') }}">Des notifications</a></li>
+                                            <li><a href="{{ path('frequentation') }}">Des clics</a></li>
                                         </ul>
                                     </li>
                                     <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a>
