freeaccess sur les disciplines

--- a/app/Resources/FOSUserBundle/views/layout.html.twig
+++ b/app/Resources/FOSUserBundle/views/layout.html.twig
@@ -55,7 +55,7 @@
                             mozallowfullscreen="" webkitallowfullscreen=""
                             src="https://player.vimeo.com/video/123835230"></iframe>#}
                     <a class="freeAccessBtn" style="max-width: 95%; display: inline-block" href="{{ path('myCourses') }}">
-                        <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png') }}" />
+                        <img style="max-width: 100%;" src="{{ asset('images/accueil/corona-afadec.png?v2') }}" />
                     </a>
 
                 {% elseif template == "excellencePro" %}
